--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "npm install && npm run build",
+    "build": "npm install",
     "dev": "nodemon server.js"
   },
   "author": "",
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "typescript": "^4.9.4",
     "validator": "^13.6.0",
     "web3.storage": "^4.4.0"
   }
